BUG - a11y color contrast

--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -7,7 +7,7 @@ $b: $bl;
 $clr_brand: #a1213d;
 $clr_black: black;
 $clr_grey-dark: #292c32;
-$clr_grey-mid: gray;
+$clr_grey-mid: #494c52;
 $clr_grey-light: whitesmoke;
 $clr_white: white;
 
@@ -55,4 +55,4 @@ $speed-std: 500ms;
 $speed-slow: 800ms;
 $speed-slowest: 1000ms;
 
-$max-width: 1200px;
+$max-width: 1440px;
